@@ -209,6 +209,7 @@ change.
    Previously they could if given the standard-vtable-fields, but inital
    values that weren't compatible with a vtable.
    (<https://bugs.gnu.org/78789>)
+** 'tmpfile' preserves O_CLOEXEC so children won't prevent removal on exit
 
 
 Changes in 3.0.10 (since 3.0.9)
